<resources>
    <string name="app_name">Never Too Late</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_notifications">Notifications</string>
    <string name="card_post_image_desc">Image from Reddit post</string>
    <string name="card_post_action_share_desc">Share</string>
    <string name="unable_to_load_iamge_desc">Image error</string>
    <string name="unable_to_load_image">Unable to load image</string>
    <string name="card_action_expand_tag_down" translatable="false">DOWN</string>
    <string name="card_action_expand_tag_up" translatable="false">UP</string>
    <string name="fullscreen_image_desc">Fullscreen image</string>
    <string name="no_internet">No internet connection.</string>
    <string name="refresh">Refresh</string>
    <string name="share_image_title">Share image with</string>
    <string name="share_error">Unable to share this image, try to share from reddit!</string>
    <string name="loading_error">Error loading</string>
    <string name="no_favorites">You don\'t have any favorites yet!</string>
    <string name="ask_remove_from_favorites">Are you sure you want to remove it from favorites?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="remove_notifications_title">Delete notification?</string>
    <string name="no_notifications">No notifications added yet!</string>
    <string name="notification_title">Motivational alarm triggered!</string>
    <string name="notification_never_triggered">This notification is yet to be triggered!</string>
    <string name="title_activity_fullscreen_image" translatable="false">FullscreenImageActivity</string>
    <string name="fullscreenImageViewTransition" translatable="false">fullImage</string>
    <string name="clock_descr">Clock icon</string>
    <string name="notification_type_image_descr">Notification type</string>
    <string name="geofence_descr">Map pin icon</string>
    <string name="daily_notification">Daily notification</string>
    <string name="dialog_notification_title">Receive motivation by</string>
    <string name="daily_notification_info_text">Daily notification at %1$02d:%2$02d</string>
    <string name="daily_notification_sub_text">Click to see last motivational image</string>
    <string name="notification_scheduled">Notification successfully scheduled!</string>
    <string name="deleted_notification">Notification deleted</string>
    <string name="undo">UNDO</string>
    <string name="notification_for_submission_deleted">Notification for this was deleted. Favorite the image in order to save it!</string>
    <string name="warning_dialog_title">Warning</string>
    <string name="ok">OK</string>
    <string name="geofence_notification">Location 100m radius notification</string>
    <string name="google_play_conn_failed">Failed to connect to Google Play Services</string>
    <string name="location_notification_success">Successfully created location-based notification!</string>
    <string name="location_notification_failed">Unable to create location-based notification</string>
    <string name="explain_fine_location_permission">We need permission to access your location in order to send location-based notifications.</string>
    <string name="geofence_error_status_not_available">Location access is turned off for your device. Turn it on and try again (settings > location access).</string>
    <string name="geofence_error_status_too_many">We can\'t continue, your device already has too many geofences registered.</string>
    <string name="geofence_error_status_pending_intents">Internal error. More than 5 pending intents for geofences!</string>
    <string name="geofence_error_status_unknown">We are sorry! Some unknown error happened.</string>
    <string name="left_arrow_descr">Previous favorite</string>
    <string name="right_arrow_descr">Next favorite</string>
    <string name="widget_image_descr">Favorite image</string>
</resources>
