<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_card_post_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="8dp"
    android:animateLayoutChanges="true"
    card_view:cardCornerRadius="2dp"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.constraint.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cl_post_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <include
                android:id="@+id/image_error_layout"
                android:visibility="gone"
                layout="@layout/error_loading_image_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_default_size"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/iv_post_favorite"
                />

            <ProgressBar
                android:id="@+id/pb_loading_image"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/image_default_size"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/iv_post_favorite"
                />

            <ImageView
                android:id="@+id/iv_post_image"
                android:contentDescription="@string/card_post_image_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/iv_post_favorite"
                />

            <ImageView
                android:id="@+id/iv_post_favorite"
                android:src="@drawable/ic_favorite_outline_24dp"
                android:contentDescription="@string/card_post_action_share_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/card_action_padding"
                android:tint="@color/colorCardAction"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <ImageView
                android:id="@+id/iv_post_reddit"
                android:src="@drawable/ic_reddit_24dp"
                android:contentDescription="@string/card_post_action_share_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/card_action_padding"
                android:tint="@color/colorCardAction"
                app:layout_constraintLeft_toRightOf="@id/iv_post_favorite"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <ImageView
                android:id="@+id/iv_post_share"
                android:src="@drawable/ic_share_24dp"
                android:contentDescription="@string/card_post_action_share_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/card_action_padding"
                android:tint="@color/colorCardAction"
                app:layout_constraintLeft_toRightOf="@id/iv_post_reddit"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <ImageView
                android:id="@+id/iv_post_expand"
                android:src="@drawable/ic_expand_down_24dp"
                android:contentDescription="@string/card_post_action_share_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/card_action_padding"
                android:tag="@string/card_action_expand_tag_down"
                android:tint="@color/colorCardAction"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/tv_post_description"
            android:textSize="14sp"
            android:textColor="@color/colorPrimaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="24dp"
            android:visibility="gone"
            tools:text="This is a description for the insightful image."
            />
    </LinearLayout>
</android.support.v7.widget.CardView>
